--- a/.github/workflows/.github/workflows/deploy-frontend-release.yml
+++ b/.github/workflows/.github/workflows/deploy-frontend-release.yml
@@ -12,18 +12,38 @@ permissions:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     env:
       PROJECT_ID: chadbot-483020
       REGION: us-central1
-      SERVICE: chadbot-frontend
       REPO: chadbot-repo
+      SERVICE: chadbot-frontend
       IMAGE_NAME: chadbot-frontend
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Auth con Workload Identity (igual que backend)
+      # Build dist/ inside CI so we don't need to commit it
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22"
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm install --legacy-peer-deps
+
+      - name: Build CSR (dist/)
+        run: npm run build:csr
+
+      - name: Verify dist/
+        run: |
+          test -d dist
+          test -f dist/index.html
+          echo "dist/ ready"
+
+      # Auth to GCP using Workload Identity Federation
       - name: Auth (Workload Identity)
         uses: google-github-actions/auth@v2
         with:
@@ -33,17 +53,10 @@ jobs:
       - name: Setup gcloud
         uses: google-github-actions/setup-gcloud@v2
 
-      - name: Configure Docker auth
+      - name: Configure Docker auth for Artifact Registry
         run: gcloud auth configure-docker ${{ env.REGION }}-docker.pkg.dev --quiet
 
-      # Si vos NO querés buildear en CI y solo subir dist, dist debe venir commiteado en la rama.
-      - name: Validate dist exists
-        run: |
-          test -d dist
-          test -f dist/index.html
-          echo "dist/ OK"
-
-      - name: Build and Push image
+      - name: Build and push image
         run: |
           TAG="${GITHUB_REF_NAME//\//-}-${GITHUB_SHA::7}"
           IMAGE="${REGION}-docker.pkg.dev/${PROJECT_ID}/${REPO}/${IMAGE_NAME}:${TAG}"
@@ -52,12 +65,19 @@ jobs:
           docker build -t "$IMAGE" .
           docker push "$IMAGE"
 
-      - name: Deploy to Cloud Run
+      - name: Deploy to Cloud Run (release)
         run: |
-          gcloud run deploy "${SERVICE}" \
-            --project "${PROJECT_ID}" \
-            --region "${REGION}" \
-            --image "${IMAGE}" \
+          gcloud run deploy "$SERVICE" \
+            --project "$PROJECT_ID" \
+            --region "$REGION" \
+            --image "$IMAGE" \
             --allow-unauthenticated \
             --port 8080 \
             --quiet
+
+      - name: Output service URL
+        run: |
+          gcloud run services describe "$SERVICE" \
+            --project "$PROJECT_ID" \
+            --region "$REGION" \
+            --format="value(status.url)"
