--- a/.github/workflows/deploy-frontend-prod.yml
+++ b/.github/workflows/deploy-frontend-prod.yml
@@ -29,10 +29,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "22"
-          cache: "npm"
 
       - name: Install dependencies
-        run: npm install --legacy-peer-deps
+        run: npm install --legacy-peer-deps --no-audit --no-fund
 
       - name: Build CSR (dist/)
         run: npm run build:csr
