CI: deploy Cloud Run using chadbot-run-sa

--- a/.github/workflows/deploy-frontend-prod.yml
+++ b/.github/workflows/deploy-frontend-prod.yml
@@ -72,6 +72,7 @@ jobs:
             --image "$IMAGE" \
             --allow-unauthenticated \
             --port 8080 \
+            --service-account chadbot-run-sa@chadbot-483020.iam.gserviceaccount.com \
             --quiet
 
       - name: Output service URL
