--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@heroui/react": "^2.8.7",
     "@heroui/theme": "^2.4.25",
     "@hookform/resolvers": "^3.9.1",
+    "@microsoft/fetch-event-source": "^2.0.1",
     "autoprefixer": "^10.4.20",
     "clsx": "^2.1.1",
     "date-fns": "4.1.0",
